k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geraeteausleihe
  namespace: geraeteausleihe
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: geraeteausleihe

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  template:
    metadata:
      labels:
        app: geraeteausleihe
    spec:
      terminationGracePeriodSeconds: 30

      containers:
        - name: app
          image: ghcr.io/cancani/geraeteausleihe-sem4:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - sleep 10

          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
